--- a/praca.tex
+++ b/praca.tex
@@ -81,6 +81,11 @@
 
 \newenvironment{centab}[1]{\begin{center}\begin{tabular}{#1}}{\end{tabular}\end{center}}
 
+\newcommand{\edb}{\textit{edb} }
+\newcommand{\idb}{\textit{idb} }
+\newcommand{\inst}{\textit{inst} }
+\newcommand{\sch}{\textit{sch} }
+\newcommand{\adom}{\textit{adom} }
 
 \newcommand{\narrow}[1]{\begin{changemargin}{2cm}{2cm} #1 \end{changemargin}}
 \newcommand{\relat}[2]{$\textsc{#1}#2$}
