--- a/1datalog.tex
+++ b/1datalog.tex
@@ -3,15 +3,15 @@
 
 In this chapter we describe the basic Datalog language and its typical extended versions.
 
-Languages based on relational algebra and relational calculus, like SQL, are widely used and researched as query languages for relational databases. This dates back to Edgar F. Codd's relational model \cite{coddrelmodel} introduced in 1970. Unfortunately, such languages leave some simple operations that they can not handle. Examples of such problems are transitive closure of a graph or distances from a vertex to all other vertices.
+Languages based on relational algebra and relational calculus, like SQL, are widely used and researched as query languages for relational databases. This dates back to Edgar F. Codd's relational model \cite{coddrelmodel} introduced in 1970. Unfortunately, such languages leave some simple operations that they can not handle. Examples of such problems are transitive closure of a graph or distances from a vertex to all other vertices. Although new implementations of SQL permit recursion, it is usually not suitable for expressing complex graph algorithms in an easy and succint way.
 
-Datalog is a language that enhances relational calculus with recursion, which allows for solving those problems. It appeared around 1978 and is inspired by logical programming paradigm. Recently, there is an increasing interest in Datalog research as well as its implementations in industry. Datalog is typically extended with negation and simple, non-recursive aggregation.
+Datalog \cite{fod} is a language that enhances relational calculus with recursion, which allows for solving those problems. It appeared around 1978 and is inspired by the logical programming paradigm. Recently, there is an increasing interest in Datalog research as well as its implementations in industry. Datalog is typically extended with negation and simple, non-recursive aggregation.
 
-Let us begin with an example of a problem which can not be solved in relational calculus, but can be easily solved in Datalog.
+Let us begin with an example of a problem which cannot be solved in relational calculus, but can easily be solved in Datalog.
 
-Let us suppose that we have a database with a binary relation $\textsc{Edge}$. The database represents a graph $G$: if $\textsc{Edge}(a, b)$ means that there is an edge in $G$ between vertices $a$ and $b$. Given a selected vertex $s$, we would like to find all vertices in $G$ that are reachable from $s$.
+Let us suppose that we have a database with a binary relation $\textsc{Edge}$. The database represents a graph $G$: $\textsc{Edge}(a, b)$ means that there is an edge in $G$ between vertices $a$ and $b$. Given a selected vertex $s$, we would like to find all vertices in $G$ that are reachable from $s$.
 
-Unfortunately, unless we have some additional assumptions about $G$, is seems difficult to answer this query using languages like SQL. It can be proven that this kind of query is not expressible in the relational calculus \cite{fod}. Intuitively, what is necessary to answer such queries is some kind of conditional iteration or recursion, which is the most important feature of Datalog.
+Unfortunately, unless we have some additional assumptions about $G$, it can be proven that this kind of query is not expressible in relational calculus \cite{fod}. Intuitively, what is necessary to answer such queries is some kind of conditional iteration or recursion, which is the most important feature of Datalog.
 
 \section{History}
 
@@ -21,13 +21,13 @@ Datalog is described in detail in classical books on databases theory, such as \
 
 The language has been proven to be useful in various fields like program analysis \cite{pointanalysis}, network systems \cite{boomanalysis, dataloganalysis}. It is also used to formally define computational problems which can be solved with different models and frameworks, allowing for comparison of those frameworks and their optimizations \cite{ullman}. 
 
-Some of the most important fields of research concerning Datalog are optimizations in programs evaluation (magic sets \cite{magicsets}, subsumptive queries \cite{subsumptivequeries}) and extensions to the language \cite{magicsetsexist, disjunctivedatalog, datalogrelaunched}.
+Some of the most important fields of research concerning Datalog are optimizations in programs evaluation, e.g. magic sets \cite{magicsets} and subsumptive queries \cite{subsumptivequeries}, and extensions to the language \cite{magicsetsexist, disjunctivedatalog, datalogrelaunched}.
 
 Recently there is also an increasing interest in applications of Datalog in industry. Two examples worth mentioning are LogicBlox and Datomic. LogicBlox \cite{logicblox} delivers a high performance database which can be queried with a Datalog variant called LogiQL.  Datomic \cite{datomic} is a distributed database with an innovative architecture featuring immutable records and temporal queries, which uses Datalog as a query language.
 
 \section{Introduction to Datalog}
 
-Before we formally define Datalog syntax and semantics, let us take a look at an example program in this language.
+Before we formally define Datalog syntax and semantics in the following sections, let us take a look at an example program in this language.
 
 As before, let us assume that the database contains a relation $\textsc{Edge}$ representing a graph and $\textsc{Edge}(a, b)$ means that there is an edge between vertices $a$ and $b$. The following program computes relation $\textsc{Tc}$ containing a transitive closure of relation $\textsc{Edge}$.
 
@@ -68,49 +68,53 @@ The result of the program is:
   \hline
 \end{centab}
 
-As we can see, the program defines a function from the an instance of relation $\textsc{Edge}$ into an instance of relation $\textsc{Tc}$.
+As we can see, the program defines a function from an instance of relation $\textsc{Edge}$ into an instance of relation $\textsc{Tc}$.
 
-In the following sections, we will define Datalog's syntax and semantics in a more formal way.
+\subsection{Differences between Datalog and Prolog}
+Datalog was largely inspired by logic programming languages such as Prolog. Datalog's and Prolog's syntax are very similar.
+Despite the close relation between Datalog and logic programming languages, there are some significant differences:
+\begin{itemize}
+\item In Prolog, one can use complex terms as arguments to predicates, for example $p(s(x), y)$, which is not permitted in Datalog, where the only allowed arguments are constants and variables.
+\item One of the important language constructs in Prolog is the cut operator ``!'', which allows to express negation. There is no such operator in Datalog. While some versions of Datalog have the notion of negation, it is still different than the cut operator known from Prolog.
+\item Datalog requires the rules to be \emph{safe}, which means that every variable mentioned in a rule must be also mentioned at least once in a non-negated, non-arithmetic sense.
+\end{itemize}
 
 \section{Datalog syntax}
-Let us formally Datalog programs and rules.
+Let us define Datalog programs and rules.
 
-\begin{defn}
+\begin{defn}[Rule]
 A \emph{rule} is an expression of the form:
 $$ \textsc{R}(x) \assign R_1(x_1), \dots, R_n(x_n). $$
-where $n \ge 1$, $R, R_1, \dots, R_n$ are names of relations and $x, x_1, \dots x_n$ are tuples of free variables or constants. Each tuple $x, x_1, \dots x_n$ must have the same arity as the corresponding relation.
+where $n \ge 1$, $R, R_1, \dots, R_n$ are names of relations and $x, x_1, \dots x_n$ are tuples of free variables or constants. Each tuple $x, x_1, \dots x_n$ must have the same arity as its corresponding relation.
 \end{defn}\label{d:datalogrule}
 
-The sign $\assign$ splits the rule into two parts: the leftmost part, i.e. $R(x)$ is called the \emph{head} of the rule, while the rightmost part, i.e. $R_1(x_1), \dots, R_n(x_n)$ is called the \emph{body} of the rule. The elements of body separated by commas are called \emph{subgoals}. Head and the subgoals are called \emph{atoms}. Each atom consists of a \emph{predicate}, i.e. the relation name and \emph{arguments}.
+The sign $\assign$ splits the rule into two parts: the leftmost part, i.e. $R(x)$, is called the \emph{head} of the rule, while the rightmost part, i.e. $R_1(x_1), \dots, R_n(x_n)$, is called the \emph{body} of the rule. The elements of the body separated by commas are called \emph{subgoals}. The head and subgoals are called \emph{atoms}. Each atom consists of a \emph{predicate}, i.e. the relation name and \emph{arguments}.
 
-\begin{defn}
+Intuitively, if there is a free variable in the head, it should also appear in at least one of the subgoals, so that the value for that variable can be determined by matching the corresponsing subgoal. Rules satisfying this property are called \emph{safe}.
+
+\begin{defn}[Rule safety]
 A rule is \emph{safe} if the each free variable appearing in its head also appears in at least one of the subgoals.
 \end{defn}\label{d:datalogsaferule}
 
-\begin{defn}
+A program in Datalog consists of some number of rules, all of which are required to be safe. Order of the rules is irrelevant.
+
+\begin{defn}[Program in Datalog]
 A \emph{program} in Datalog is a finite set of safe rules.
 \end{defn}\label{d:datalogprog}
 
-By $adom(P)$ we denote the set of constants appearing in the rules of $P$.
+By $\adom(P)$ we denote the set of constants appearing in the rules of $P$.
 
-The \emph{schema} of program $P$ is the set of all relation names occurring in $P$ and is denoted by $sch(P)$.
+The \emph{schema} of program $P$ is the set of all relation names occurring in $P$ and is denoted by $\sch(P)$.
 
-\begin{defn}
+\begin{defn}[Extensional and intensional relations]
 The rules of a Datalog program $P$ divide the relations into two disjoint classes: 
 \begin{itemize}
-\item \emph{extensional} relations, i.e. relations that occur only in the subgoals, but never in the head of the rules in $P$
-\item \emph{intensional} relations occurring in the head of at least one of the rules in $P$
+\item \emph{extensional} relations, i.e. relations that occur only in the subgoals, but never in the head of the rules in $P$,
+\item \emph{intensional} relations occurring in the head of at least one of the rules in $P$.
 \end{itemize}
 \end{defn}
 
-The set of extensional relations are called the \emph{edb} or \emph{extensional database}, whereas the set of intensional relations is called \emph{idb} or \emph{intensional database}. For a program $P$, the \emph{extensional database schema}, denoted by $edb(P)$, is the set of all extensional relation names. Similarly, the \emph{intensional database schema}, denoted by $idb(P)$, is the set of all intensional relation names. 
-
-A Datalog program is essentially a function from database instances over $edb(P)$ into database instances over $idb(P)$.
-
-\begin{defn}
-Given a rule $ \textsc{R}(x) \assign R_1(x_1), \dots, R_n(x_n). $, if $\nu$ is a valuation of variables appearing in this rule, then we obtain an \emph{instantiation} of this rule by replacing each variable $t$ in the rule by its value $\nu(t)$:
-$$ \textsc{R}(\nu(x)) \assign R_1(\nu(x_1)), \dots, R_n(\nu(x_n)). $$
-\end{defn}
+The set of extensional relations is called the \emph{extensional database} or the \edb, whereas the set of intensional relations is called the \emph{intensional database} or the \idb. For a program $P$, the \emph{extensional database schema}, denoted by $\edb(P)$, is the set of all extensional relation names. Similarly, the \emph{intensional database schema}, denoted by $\idb(P)$, is the set of all intensional relation names. 
 
 \begin{exmp}
 As an example, let us consider the following program $P$:
@@ -122,61 +126,72 @@ As an example, let us consider the following program $P$:
   & \textsc{Ancestor} (ancestor, child) &&  & \assign & && \textsc{Ancestor} (ancestor, parent), \textsc{Parent} (parent, child) &\\
 }{}{}
 
-Assuming that \relat{Parent}{(p, c)} means that $p$ is $c$'s parent and \relat{Woman}{(x)} and \relat{Man}{(x)} tell whether person $x$ is a woman or a man, this program computes child's father, mother and all its ancestors that can be derived.
+Assuming that \relat{Parent}{(p, c)} means that $p$ is $c$'s parent and \relat{Woman}{(x)} and \relat{Man}{(x)} tell whether person $x$ is a woman or a man, respectively, this program computes child's father, mother and all its ancestors that can be derived.
 
-\emph{edb} and \emph{idb} for $P$ are the following:
+\edb and \idb for $P$ are the following:
 \begin{align*}
-edb(P) =& \{\textsc{Parent}, \textsc{Man}, \textsc{Woman}\} \\
-idb(P) =& \{\textsc{Mother}, \textsc{Father}, \textsc{Ancestor}\}
+\edb(P) =& \{\textsc{Parent}, \textsc{Man}, \textsc{Woman}\} \\
+\idb(P) =& \{\textsc{Mother}, \textsc{Father}, \textsc{Ancestor}\}
 \end{align*}
 
-\relat{Parent}{}, \relat{Man}{}, \relat{Man}{} are \emph{edb} relations, because there are no rules for those relations. All of their contents must be provided as an input. On the other hand, \relat{Mother}{}, \relat{Father}{}, \relat{Ancestor}{} are \emph{idb} relations, since there are rules for computing them. Only one of them, \relat{Ancestor}{} is recursively defined.
+\relat{Parent}{}, \relat{Woman}{} and \relat{Man}{} are \edb relations, because there are no rules for these relations. All of their contents must be provided as an input. On the other hand, \relat{Mother}{}, \relat{Father}{} and \relat{Ancestor}{} are \idb relations, since there are rules for computing them. Only one of them, \relat{Ancestor}{}, is recursively defined.
 
-If $Anna, Chris, Patrick$ are some values in the domain, an example of an instantiation of the last rule is:
-$$\textsc{Ancestor}(Anna, Chris) \assign \textsc{Ancestor} (Anna, Patrick), \textsc{Parent} (Patrick, Chris)$$
 \end{exmp}
 
-\subsection{Differences between Datalog and Prolog}
-Despite the close relation between Datalog and logic programming languages, there are some significant differences:
-\begin{itemize}
-\item in Prolog, one can use complex terms as arguments to predicates, for example $p(s(x), y)$, which is not permitted in Datalog, where the only allowed arguments are domain elements or variables: $p(x, y)$.
-\item in Prolog, there is a cut operator which is not present in Datalog. While some versions of Datalog have the notion of negation, but it is still different than the cut operator.
-\item Datalog requires the rules to be \emph{safe}, which means that every variable mentioned in a rule must be also mentioned at least once in a non-negated, non-arithmetic sense
-\end{itemize}
-
-
 \section{Datalog semantics}
-Semantics of a Datalog program can be defined using one of three different equivalent approaches.
+A Datalog program is essentially a function from database instances over $\edb(P)$ into database instances over $\sch(P)$. \margp{Czy to znaczy że \idb zawsze są puste przed uruchomieniem programu?}{Tak. Czy powinienem to jakoś dodatkowo zaznaczyć?} The exact semantics of a Datalog program can be defined using one of three  equivalent approaches.
 
 In the \emph{model theoretic} definition, we consider the rules of program $P$ to be logical properties of the desired solution. From all possible instances of the intensional database we choose those, which are a \emph{model} for the program, i.e. satisfy all the rules. The smallest such model is defined to be the semantics of $P$.
 
-A second approach is \emph{proof theoretic}, in which a fact is included in the result if and only if it can be derived, or proven using the rules. There are two strategies for obtaining proofs for facts: \emph{bottom up}, in which we start from all known facts and incrementally derive all provable facts, and \emph{top down}, which starts from a fact to be proven and seeks for rules and facts that can be used to prove it.
+The second approach is \emph{proof theoretic}, in which a fact is included in the result if and only if it can be derived, or proven using the rules. There are two strategies for obtaining proofs for facts: \emph{bottom up}, in which we start from all known facts and incrementally derive all provable facts, and \emph{top down}, which starts from a fact to be proven and seeks for rules and facts that can be used to prove it.
 
-A third approach, on which we focus in this thesis is the \emph{least fix-point} semantics, which defines the result of a program as a least fix-point of some function. In this definition, a program is evaluated by iteratively applying a function until a fix-point is reached. This is very similar to the bottom-up evaluation strategy of the proof-theoretic approach.
+The third approach, on which we focus in this thesis is the \emph{least fix-point semantics}, which defines the result of a program as a least fix-point of some function. In this definition, a program is evaluated by iteratively applying a function until a fix-point is reached. This is very similar to the bottom-up evaluation strategy of the proof-theoretic approach.
 
 \subsection{Fix-point semantics}
-In this section we show the fix-point semantics for Datalog programs. A central notion in this definition is the \emph{immediate consequence} operator. Intuitively, that operator adds to the database new facts that could be immediately derived using one of the rules.
+In this section we show the fix-point semantics for Datalog programs. A central notion in this definition is the \emph{immediate consequence} operator. Intuitively, that operator adds to the database new facts that could be immediately derived using one of the rules. In order to define the immediate consequence operator, let us first introduce the notion of an instantiation of a rule.
 
-Given a Datalog program $P$, let $\textbf{K}$ be a database instance over $sch(P)$.
+\begin{defn}[Instantiation]
+Given a rule $ \textsc{R}(x) \assign R_1(x_1), \dots, R_n(x_n). $, if $\nu$ is a valuation of variables appearing in this rule, then we obtain an \emph{instantiation} of this rule by replacing each tuple in the rule by its value $\nu(t)$:
+$$ \textsc{R}(\nu(x)) \assign R_1(\nu(x_1)), \dots, R_n(\nu(x_n)). $$
+\end{defn}
 
-We say that a fact $R(v)$ is an \emph{immediate consequence} for $\textbf{K}$ and $P$ if $R(v) \in \textbf{K}$ or there exists an instantiation $R(v) \assign R_1(v_1), \dots, R_n(v_n)$ of a rule in $P$ such that $R_i(v_i) \in \textbf{K}$ for each $i = 1\dots n$.
+\begin{exmp}
+If $Anna, Chris, Patrick$ are some values in the domain, 
+$$\textsc{Ancestor}(Anna, Chris) \assign \textsc{Ancestor} (Anna, Patrick), \textsc{Parent} (Patrick, Chris).$$
+is an instantiation of the rule 
+$$\textsc{Ancestor} (ancestor, child) \assign \textsc{Ancestor} (ancestor, parent), \textsc{Parent} (parent, child).$$
+\end{exmp}
 
-The \emph{immediate consequence operator} for a Datalog program $P$ is a function $T_P: inst(sch(P)) \to inst(sch(P))$:
-$$T_P(\textbf{K}) = \{ F: F \text{ is a fact over } sch(P) \text{ and $F$ is an immediate consequence for } \textbf{K} \text{ and } P \}$$
+\subsubsection{Immediate consequence operator}
+Given some database $\textbf{K}$ and a program $P$, we can infer facts using the rules in $P$ and the contents of $\textbf{K}$. This procedure is formally defined using the \emph{immediate consequence operator}.
+
+\begin{defn}[Immediate consequence operator]
+
+Given a Datalog program $P$, let $\textbf{K}$ be a database instance over $\sch(P)$.
+
+We say that a fact $R(v)$ is an \emph{immediate consequence} for $\textbf{K}$ and $P$, if $R(v) \in \textbf{K}$ or there exists an instantiation $R(v) \assign R_1(v_1), \dots, R_n(v_n)$ of a rule in $P$ such that $R_i(v_i) \in \textbf{K}$ for each $i = 1\dots n$.
+
+The \emph{immediate consequence operator} for a Datalog program $P$ is a function $T_P: \inst(\sch(P)) \to \inst(\sch(P))$:
+$$T_P(\textbf{K}) = \{ R(v): R(v) \text{ is an immediate consequence for } \textbf{K} \text{ and } P \}$$
+
+\end{defn}
 
 \begin{lem}
 Operator $T_P$ for any Datalog program $P$ is a monotone function with respect to inclusion order.
 \end{lem}
-\emph{Proof.} Given any $\textbf{I}, \textbf{J} \in inst(sch(P))$ such that $\textbf{I} \subseteq \textbf{J}$, let $F$ be a fact in $T_P(\textbf{I})$.
-By definition, $F$ is an immediate consequence of $\textbf{I}$, so either $F$ is in $\textbf{I}$ or it there exists an instantiation
- $F \assign F_1, \dots, F_n$ of a rule in $P$ such that $F_i \in \textbf{I}$ for each $i = 1\dots n$. 
-In the first case $F \in \textbf{I} \subseteq \textbf{J}$, so $F \in \textbf{J}$. 
-In the second case, each $F_i \in \textbf{I} \subseteq \textbf{J}$, so the instantiation also exists in $\textbf{J}$. 
-Hence, $F$ is also an immediate consequence of $\textbf{J}$, and thus $F \in T_P(\textbf{J})$. 
-Since $F$ was arbitrarily chosen, we have that $T_P(\textbf{I}) \subseteq T_P(\textbf{I})$ and $T_P$ is a monotone function with respect to $\subseteq$.
+\emph{Proof.} Given any $\textbf{I}, \textbf{J} \in inst(\sch(P))$ such that $\textbf{I} \subseteq \textbf{J}$, let $R(v)$ be a fact in $T_P(\textbf{I})$.
+By definition, $R(v)$ is an immediate consequence for $\textbf{I}$ and $P$, so either $R(v)$ is in $\textbf{I}$ or there exists an instantiation
+ $R(v) \assign R_1(v_1), \dots, R_n(v_n)$ of a rule in $P$ such that $R_i(v_i) \in \textbf{I}$ for each $i = 1\dots n$. 
+In the first case $R(v) \in \textbf{I} \subseteq \textbf{J}$, so $R(v) \in \textbf{J}$. 
+In the second case, each $R_i(v_i) \in \textbf{I} \subseteq \textbf{J}$, so the instantiation also exists in $\textbf{J}$. 
+Hence, $R(v)$ is also an immediate consequence of $\textbf{J}$, and thus $R(v) \in T_P(\textbf{J})$. 
+Since $R(v)$ was arbitrarily chosen, we have that $T_P(\textbf{I}) \subseteq T_P(\textbf{I})$ and $T_P$ is a monotone function with respect to $\subseteq$.
+
+\subsubsection{Semantics of a Datalog program}
+The output of a Datalog program $P$ on some input $\textbf{K}$, denoted by $P(\textbf(K))$, is defined as the minimum fix-point of $T_P$ that contains $\textbf{K}$.
 
 \begin{thm}
-For any $P$ and an instance $\textbf{K}$ over $edb(P)$, there exists a finite minimal fix-point of $T_P$ containing $\textbf{K}$.
+For any Datalog program $P$ and an instance $\textbf{K}$ over $\edb(P)$, there exists a finite minimum fix-point of $T_P$ containing $\textbf{K}$.
 \end{thm}\label{t:datalogfixpointsem}
 \emph{Proof.}
 The definition of $T_P$ implies that $\textbf{K} \subseteq T_P(\textbf{K})$.
@@ -184,9 +199,9 @@ Because of monotonicity of $T_P$, we have inductively that $T_P^i(\textbf{K}) \s
 Hence, we have that:
 $$\textbf{K} \subseteq T_P(\textbf{K}) \subseteq T_P^2(\textbf{K}) \subseteq T_P^3(\textbf{K}) \subseteq \dots$$
 
-$adom(P) \cup adom(\textbf{K})$ and the database schema $sch(P)$ of $P$ are all finite, so there is a finite number $n$ of database instances over $sch(P)$ using those values. Hence, the sequence $\{T_P^i(\textbf{K})\}_i$ reaches a fix-point: $T_P^n(\textbf{K}) = T_P^{n+1}(\textbf{K})$. Let us denote this fix-point by $T_P^*(\textbf{K})$.
+As it holds that $\adom(P) \cup \adom(\textbf{K})$ and the database schema $\sch(P)$ of $P$ are all finite, there is a finite number $n$ of database instances over $\sch(P)$ that can be reached by iteratively applying $T_P$ to $\textbf{K}$. Hence, the sequence $\{T_P^i(\textbf{K})\}_i$ reaches a fix-point: $T_P^n(\textbf{K}) = T_P^{n+1}(\textbf{K})$. Let us denote this fix-point by $T_P^*(\textbf{K})$.
 
-We will now prove that this is the minimum fix-point of $T_P$ containing $\textbf{K}$. Let us suppose that $\textbf{J}$ is a fix-point of $T_P$ containing  $\textbf{K}$:  $\textbf{K} \subseteq \textbf{J}$. By applying $T_P$ $n$ times to both sides of the inequality, we have that $T_P^*(\textbf{K}) = T_P^n(\textbf{K}) \subseteq \textbf T_P^n(\textbf{J} = \textbf{J}$. Hence, $T_P^*(\textbf{K})$ is the minimum fix-point of $T_P$ containing $\textbf{K}$.
+We will now prove that this is the minimum fix-point of $T_P$ containing $\textbf{K}$. Let us suppose that $\textbf{J}$ is a fix-point of $T_P$ containing  $\textbf{K}$:  $\textbf{K} \subseteq \textbf{J}$. By applying $T_P$ $n$ times to both sides of the inequality, we have that $T_P^*(\textbf{K}) = T_P^n(\textbf{K}) \subseteq \textbf T_P^n(\textbf{J}) = \textbf{J}$. Hence, $T_P^*(\textbf{K})$ is the minimum fix-point of $T_P$ containing $\textbf{K}$.
 
 
 \begin{exmp}
@@ -199,7 +214,7 @@ Let us recall the example program $P$ from the previous section:
   & \textsc{Ancestor} (ancestor, child) &&  & \assign & && \textsc{Ancestor} (ancestor, parent), \textsc{Parent} (parent, child) &\\
 }{}{}
 
-Given the following \emph{edb} database instance \textbf{K}:
+Given the following \edb database instance \textbf{K}:
 
 \begin{center}
 \begin{tabular}{l}
@@ -261,7 +276,7 @@ There are also other, more optimized evaluation methods, such as Magic Sets and 
 This section briefly describes the ways to evaluate Datalog programs.
 
 \subsection{Naive evaluation}\label{ss:datalognaiveeval}
-In naive evaluation, the computation starts with the initial database containing the \emph{edb} relations and repeatedly applies all the rules, until a fixpoint is reached.
+In naive evaluation, the computation starts with the initial database containing the \edb relations and repeatedly applies all the rules, until a fixpoint is reached.
 
 In pseudocode, if $T_P$ is the immediate consequence operator, the algorithm for evaluation of a program $P$ on an input $\textbf{K}$ can be written as:
 
@@ -424,7 +439,7 @@ The following query with arithmetic comparisons solves this problem:
 
 We can think of arithmetic comparisons as a new kind of predicates, which are infinite built-in relations. Since we introduced implicit infinite relations, we need to adjust the definition of rule safety \ref{d:datalogsaferule}:
 
-\begin{defn}
+\begin{defn}[Rule safety]
 A rule with arithmetic comparisons is \emph{safe} if each free variable appearing in its head or in any of the comparisons also appears in at least one of the non-comparison subgoals.
 \end{defn}\label{d:datalogcomparisonsaferule}
 
@@ -439,7 +454,7 @@ where $x, y, z$ are free variables or constants and $\diamond$ is a binary arith
 
 An adjusted version of definition of rule safety \ref{d:datalogcomparisonsaferule} is:
 
-\begin{defn}
+\begin{defn}[Rule safety]
 A rule in Datalog with arithmetic comparisons and assignments is \emph{safe} if each free variable appearing in:
 \begin{itemize}
 \item its head,
@@ -472,14 +487,14 @@ As we can see, arithmetic addition is crucial in this program -- it would not be
 Introduction of arithmetic functions significantly changes the semantics.
 Similarly to arithmetic comparisons, arithmetic functions can be interpreted an built-in infinite relations. 
 The difference is that we do not forbid those relations to introduce new values into the database.
-Given a program $P$ and a database instance $\textbf{K}$ over $sch(P)$, rules with arithmetic functions can produce new values, i.e. values that were not present in $adom(P) \cup adom(\textbf{K})$. In our example, such situation happens if there is a cycle in $G$ reachable from the source. There is an infinite number of paths from the source to the vertices on the cycle, and thus $\textsc{Path}$ would be infinite.
+Given a program $P$ and a database instance $\textbf{K}$ over $\sch(P)$, rules with arithmetic functions can produce new values, i.e. values that were not present in $\adom(P) \cup \adom(\textbf{K})$. In our example, such situation happens if there is a cycle in $G$ reachable from the source. There is an infinite number of paths from the source to the vertices on the cycle, and thus $\textsc{Path}$ would be infinite.
 
 There are different approaches to address this problem, including \emph{finiteness dependencies} and syntactic requirements that imply safety of Datalog programs with arithmetic conditions \cite{RBS87, KRS88a, KRS88b, SV89}.
 
 For the purpose of this paper, we can simply define semantics for Datalog programs that have a finite fixed point. The updated version of Theorem \ref{t:datalogfixpointsem} is as follows.
 
 \begin{thm}
-For any $P$ and an instance $\textbf{K}$ over $edb(P)$, if there exists $n \ge 0$ such that $T_P^n(\textbf{K})$ is a fix-point of $T_P$, then is it the minimal fix-point of $T_P$ containing $\textbf{K}$.
+For any $P$ and an instance $\textbf{K}$ over $\edb(P)$, if there exists $n \ge 0$ such that $T_P^n(\textbf{K})$ is a fix-point of $T_P$, then is it the minimal fix-point of $T_P$ containing $\textbf{K}$.
 \end{thm}
 \emph{Proof.} See second part of the proof for Theorem \ref{t:datalogfixpointsem}.
 
@@ -496,7 +511,7 @@ $$\textsc{Indirect}(x, y) \assign \textsc{R}(x, y),~!\textsc{Tc}(x, y).$$
 
 When negative subgoals are permitted, we need to include them in the definition of rules safety. 
 
-\begin{defn}
+\begin{defn}[Rule safety]
 A rule in \datalogneg with arithmetic comparisons and arithmetic assignments is \emph{safe} if each free variable appearing in:
 \begin{itemize}
 \item its head,
@@ -509,18 +524,18 @@ also appears in at least one of the non-negated relational subgoals or on the le
 
 We will first consider a certain class of \datalogneg programs, called semi-positive programs, for which semantics of negation is straightforward. We will then move on to a more general version.
 
-\begin{defn}
-A \datalogneg program $P$ is \emph{semi-positive} if for each rule in $P$, all its negated subgoals are over $edb(P)$.
+\begin{defn}[Semi-positive program]
+A \datalogneg program $P$ is \emph{semi-positive} if for each rule in $P$, all its negated subgoals are over $\edb(P)$.
 \end{defn}
 
-For a semi-positive program, any relation used in a negative sense is an \emph{edb} relation, so it is constant during the evaluation of $P$. Negation could be eliminated from $P$ by introducing artificial negated \emph{edb} relations. Thus, semi-positive programs can be evaluated using the fix-point semantics just like positive Datalog programs.
+For a semi-positive program, any relation used in a negative sense is an \edb relation, so it is constant during the evaluation of $P$. Negation could be eliminated from $P$ by introducing artificial negated \edb relations. Thus, semi-positive programs can be evaluated using the fix-point semantics just like positive Datalog programs.
 
-The situation is different when \emph{idb} relations are used in negative subgoals. Let us assume that we use the naive evaluation. In classical Datalog, all tuples added to the database during the evaluation remain there until its end. However, when negation is allowed, it is not true in general. Let us consider a program which has a rule with a negated subgoal $!R(u)$. Such rule might produce a tuple $t$ in iteration $i$ because some $t'$ is not in $R$ and thus $!R(t')$ is true. When $t'$ is added to relation $R$ in a subsequent iteration though, the rule can no longer produce $t$. Some versions of negation semantics in Datalog allow for removing tuples from relations during the evaluation \cite{fod}.
+The situation is different when \idb relations are used in negative subgoals. Let us assume that we use the naive evaluation. In classical Datalog, all tuples added to the database during the evaluation remain there until its end. However, when negation is allowed, it is not true in general. Let us consider a program which has a rule with a negated subgoal $!R(u)$. Such rule might produce a tuple $t$ in iteration $i$ because some $t'$ is not in $R$ and thus $!R(t')$ is true. When $t'$ is added to relation $R$ in a subsequent iteration though, the rule can no longer produce $t$. Some versions of negation semantics in Datalog allow for removing tuples from relations during the evaluation \cite{fod}.
 
 In stratified semantics, we do not allow tuples to be removed from relations. Consequently, the inflationary semantics of Datalog is preserved. To achieve that, we require that if there is a rule for computing relation $R_1$ that uses $R_2$ in a negated subgoal, then relation $R_2$ can be fully computed before evaluation of relation $R_1$. Intuitively, this order of computation is possible if there is no direct or indirect dependency on $R_1$ in any of the rules for $R_2$, i. e. $R_1$ and $R_2$ are not recursively dependent from each other. This is formalized this by the notion of strata.
 
-\begin{defn}
-Let $P$ be a program in \datalogneg and $n = |idb(P)|$ be then number of \emph{idb} relations in $P$. A function $\rho : sch(P) \to {1, . . . , n}$ is called \emph{stratification} of $P$ if such that for each rule $\phi$ in $P$ with head predicate $T$, the following are true: 
+\begin{defn}[Stratification]
+Let $P$ be a program in \datalogneg and $n = |\idb(P)|$ be then number of \idb relations in $P$. A function $\rho : \sch(P) \to {1, . . . , n}$ is called \emph{stratification} of $P$ if such that for each rule $\phi$ in $P$ with head predicate $T$, the following are true: 
 
 \begin{enumerate}
 \item $\rho(R) \le \rho(T)$ for each positive relational subgoal $R(u)$ of $\phi$
@@ -528,17 +543,14 @@ Let $P$ be a program in \datalogneg and $n = |idb(P)|$ be then number of \emph{i
 \end{enumerate}
 \end{defn}
 
-\begin{defn}
-A program that has stratification is called \emph{stratifiable}.
-\end{defn}
-gm
-For each relation $R \in idb(P )$, $\rho(R)$ is called its \emph{stratum number}.
+A program that has stratification is called \emph{stratifiable}. 
+For each relation $R \in \idb(P )$, $\rho(R)$ is called its \emph{stratum number}.
 
 $\rho$ corresponds to a partitioning of $P$ into several subprograms $P_1, P_2, \dots, P_n$. Each of those programs is called a \emph{stratum} of $P$. The $i$-th stratum consists of the rules from $P$ which have a relation with stratum number $i$ in their head. We say that those relations are \emph{defined} in $P_i$.
 
 Stratification assures that if a relation $R$ is used in rules of stratum $P_i$, then $R$ must be defined in this stratum or one of the previous strata. Additionally, if a relation is used in stratum $P_i$ in a negated subgoal, then it must be defined in an earlier stratum. It is worth noting that this allows for recursive rules, unless the recursive subgoal is negated.
 
-For each $P_i$, $idb(P_i)$ consists of the relations defined in this stratum, while $edb(P_i)$ may contain only relations defined in earlier strata or relations from $edb(P)$. By definition of stratification, the negative subgoals in rules of $P_i$ use only relations in $edb(P_i)$. Hence, each $P_i$ is a semi-positive program and as such, it may be evaluated using the fix-point semantics.
+For each $P_i$, $\idb(P_i)$ consists of the relations defined in this stratum, while $\edb(P_i)$ may contain only relations defined in earlier strata or relations from $\edb(P)$. By definition of stratification, the negative subgoals in rules of $P_i$ use only relations in $\edb(P_i)$. Hence, each $P_i$ is a semi-positive program and as such, it may be evaluated using the fix-point semantics.
 
 We require the programs in \datalogneg to be stratifiable. If $P$ can be stratified into $P_1, P_2, \dots P_n$, then the output of program $P$ on input $\textbf{I}$ is defined by applying programs $P_1, P_2, \dots P_n$ in a sequence:
 $$P(\textbf{I}) = P_n(\dots, P_2(P_1(\textbf{I}))\dots)$$
@@ -577,7 +589,7 @@ If aggregation with function $\textsc{Min}$ is applied to the last column of thi
   \hline
 \end{centab}
 
-A simple version of aggregation can be introduced in Datalog by allowing the rules for aggregated relations to use only \emph{edb} relations in subgoals. The semantics and evaluation is then straightforward: such rules can be evaluated within a single application of the $T_P$ operator, and the aggregation can be applied immediately.
+A simple version of aggregation can be introduced in Datalog by allowing the rules for aggregated relations to use only \edb relations in subgoals. The semantics and evaluation is then straightforward: such rules can be evaluated within a single application of the $T_P$ operator, and the aggregation can be applied immediately.
 
 This definition can be extended in a simple way using the stratification method described in the previous section. Semantics for a program is defined if it can be stratified in such a way that each aggregation rule uses in its subgoals only relations defined in preceding strata. Aggregation of a relation from the same stratum, i. e. recursive aggregation, is much more complicated and is discussed in Chapter \ref{r:socialite}.
 
@@ -591,6 +603,6 @@ For an example, let us recall the program from example \ref{ex:pathsdatalog}, wh
 
 This syntax means that after inferring all possible facts using the rule for \relat{MinPath}, this relation should be aggregated using the minimum function. If there is aggregation used in a rule for some relation, there can be no other rules for this relation.
 
-In this example, there are two strata: \relat{Edge}{} is an \emph{edb} relation, \relat{Path}{} belongs to the first stratum and \relat{MinPath}{} belongs to the second stratum. Hence, \relat{MinPath}{} can be computed after computation of \relat{Path}{} is finished.
+In this example, there are two strata: \relat{Edge}{} is an \edb relation, \relat{Path}{} belongs to the first stratum and \relat{MinPath}{} belongs to the second stratum. Hence, \relat{MinPath}{} can be computed after computation of \relat{Path}{} is finished.
 
 
