--- a/0introduction.tex
+++ b/0introduction.tex
@@ -75,7 +75,9 @@ For variables $x, y, z \in \textbf{dom}$, $\nu$ such that $\nu(x) = 1, \nu(y) = 
 If $f$ is a function $f: D \to D$ and $f(x) = x$ for an $x \in D$, then $x$ is called a \emph{fix-point} of $f$.
 \end{defn}
 
+\pomysl{Może tutaj przenieść definicje partial order i pre order}
+
 \begin{defn}[Monotonicity]
-Function $f: D \to C$ is monotone with respect to order $\sqsubseteq$ if $x \sqsubseteq y \rightarrow f(x) \sqsubseteq f(y)$ for each $x, y \in D$.
+Function $f: D \to C$ is monotone with respect to pre-order $\sqsubseteq$ if $x \sqsubseteq y \rightarrow f(x) \sqsubseteq f(y)$ for each $x, y \in D$.
 \end{defn}
 
